# DuSC_explorer

./: .gitignore  4Dcamera_GUI_sparsearray.py  DuSC_explorer_tutorial.md  LICENSE  README.md  README.rst  pyproject.toml  run_DeSC_explorer.py  run_DuSC_explorer.py  setup.py
.github/workflows/: publish-to-pypi.yml
.github/worksflows/: publish-to-pypi.yml
DuSC_explorer/: DuSC_dectris.py  __init__.py  k3_version.py  rotatable.py
desc_explorer/: __init__.py  run_ncempy_4dgui.py
ncempy_4dgui/: __init__.py  __main__.py  minimum_gui.py  rotatable.py
